# smoke-generator

./: .gitignore  .pdm-python  CONTRIBUTING.md  README.md  TODO.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  pyproject.toml  uno.config.ts  vite.config.ts
src/: main.ts
src-django/: manage.py  util.py
src-django/account/: admin.py  apps.py  models.py  urls.py  views.py
src-django/account/migrations/: 0001_initial.py  0002_alter_useraccount_avatar.py  0003_alter_useraccount_options.py
src-django/billboard/: admin.py  apps.py  models.py  urls.py  views.py
src-django/billboard/migrations/: 0001_initial.py  0002_alter_announcement_options_and_more.py  0003_announcement_author.py  0004_announcement_intro.py
src-django/public/: admin.py  apps.py  models.py
src-django/public/migrations/: 0001_initial.py  0002_alter_publicjoint_options_alter_publicsmoke_options.py
src-django/smoke/: admin.py  apps.py  models.py  urls.py  views.py
src-django/smoke/migrations/: 0001_initial.py  0002_alter_jointrecord_options_alter_smokerecord_options.py  0002_alter_record_url.py  0003_alter_jointrecord_options_alter_smokerecord_options.py  0004_alter_jointrecord_url_alter_smokerecord_url.py
src-django/smokegenerator/: asgi.py  settings.py  urls.py  wsgi.py
src/axios/: index.ts
src/components/: Announcement.vue  ColoredCard.vue  Error.vue  Forbidden.vue  SidePanel.vue  TopBar.vue
src/router/: index.ts
src/scripts/: items.ts
src/stores/: announce.ts  token.ts  user.ts
src/views/: dashboard.vue  index.vue  login.vue  register.vue
(+20 files in other folders)
