[project]
name = "SmokeGenerator"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "苏向夜", email = "fu050409@163.com"},
]
dependencies = [
    "Django>=5.0.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPLv3"}


[tool.pdm]
distribution = false
