[project]
name = "SmokeGenerator"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "苏向夜", email = "fu050409@163.com"},
]
dependencies = [
    "Pillow>=10.3.0",
    "django-simpleui>=2024.4.1",
    "django-cors-headers>=4.3.1",
    "django>=5.0.6",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPLv3"}


[tool.pdm]
distribution = false
